--- a/calendar/css/calendar2.css
+++ b/calendar/css/calendar2.css
@@ -30,6 +30,7 @@ body {
 #menubar_part {
 	display : flex;
 	justify-content:center; /*가운데 배치*/
+	margin-bottom : 5%;
 }
 #menubar_part span {
 	font-size : 3vw;
@@ -92,9 +93,18 @@ ul.selectList>li:active {
 
 /* body : calendar */
 #calendar_part {
-	margin-top:5%;
-	margin-left:5%;
-	margin-right:5%;
+	margin-left:10%;
+	margin-right:10%;
+	display:flex;
+	/*display:flex;
+	justify-content:center; */
+	border:1px solid black;
+	border-radius:5px;
+}
+.calendar_part {
+	margin-top:2%;
+	margin-left:10%;
+	margin-right:10%;
 	display:flex;
 	/*display:flex;
 	justify-content:center; */
@@ -103,20 +113,27 @@ ul.selectList>li:active {
 }
 .calendar_date1 {
 	float:left;
-	width:20%;
+	width:35%;
 	text-align:center;
 }
 .calendar_date2 {
 	float:left;
-	width:20%;
+	width:25%;
 	text-align:center;
 	margin-right:5%;
 }
 .calendar_content {
 	float:left;
-	width:50%;
+	width:40%;
 }
 .calendar_part_text {
 	font-family: 'Noto Serif KR', serif;
 	font-size : 3vw;
+	display:block;
+}
+.WEEKEND {
+	color:red;
+}
+.RESTDAY {
+	color:red;
 }
